Minor updates to path to write aggregated .csv files to

--- a/Airbnb Raw Data Aggregation.ipynb
+++ b/Airbnb Raw Data Aggregation.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "import glob\n",
     "\n",
     "#Set path to location of SF Airbnb raw data on local machine\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Raw Data\\SF Airbnb Raw Data/' # use your path"
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Raw Data\\SF Airbnb Raw Data/'"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "[5 rows x 106 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,12 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Write listings to csv file\n",
-    "# ##path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
+    "# #Set path to write df to csv\n",
+    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
+    "\n",
+    "# #Write to csv file\n",
     "# listings.to_csv(path_to_file, sep='\\t')"
    ]
   },
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +439,7 @@
        "4         958        15416       Venetia  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,14 +471,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# #Set path to write df to csv\n",
-    "# location = r''\n",
+    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Reviews_Nov2018_Oct2019.csv'\n",
+    "\n",
     "# #Write to csv file\n",
-    "# reviews.to_csv(\"SF_Reviews_Nov2018_Oct2019.csv\", sep='\\t')"
+    "# reviews.to_csv(path_to_file, sep='\\t')"
    ]
   },
   {
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +602,7 @@
        "4             3.0  $81.00  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,12 +634,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# #Set path to write df to csv\n",
+    "# path_to_file = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_calendar_Nov2018_Oct2019.csv'\n",
+    "\n",
     "# #Write to csv file\n",
-    "# calendar.to_csv(\"SF_calendar_Nov2018_Oct2019.csv\", sep='\\t')"
+    "# calendar.to_csv(path_to_file, sep='\\t')"
    ]
   }
  ],
