Updated path to aggregated raw Calendar data

--- a/Airbnb Calendar Data Cleaning.ipynb
+++ b/Airbnb Calendar Data Cleaning.ipynb
@@ -39,18 +39,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read in Airbnb Listings Data\n",
-    "listings = pd.read_csv('Airbnb SF Data\\SF_Listings_Nov2018_Oct2019.csv',index_col=0, low_memory=False, sep='\\t')\n",
+    "#Set path to get aggregated Calendar data\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Calendar_Nov2018_Oct2019.csv'\n",
     "\n",
     "#Parse dates\n",
     "parse_dates = ['date']\n",
     "\n",
     "#Read in calendar and reviews data\n",
-    "calendar = pd.read_csv('Airbnb SF Data\\SF_calendar_Nov2018_Oct2019.csv', sep = '\\t',\n",
-    "                       parse_dates=parse_dates,index_col=0, low_memory=False)\n",
-    "\n",
-    "reviews = pd.read_csv('Airbnb SF Data\\SF_Reviews_Nov2018_Oct2019.csv', sep='\\t',\n",
-    "                      parse_dates=parse_dates,index_col=0)\n"
+    "calendar = pd.read_csv(path, sep = '\\t', parse_dates=parse_dates,index_col=0, low_memory=False)"
    ]
   },
   {
