Deleted unnecessary cell blocks

--- a/Airbnb Calendar Data Cleaning.ipynb
+++ b/Airbnb Calendar Data Cleaning.ipynb
@@ -185,11 +185,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Remove any duplicate rows\n",
-    "# calendar.drop_duplicates(inplace=True)\n",
+    "#Remove any duplicate rows\n",
+    "calendar.drop_duplicates(inplace=True)\n",
     "\n",
-    "# #Updated calendar shape\n",
-    "# print('Updated calendar shape:', calendar.shape)"
+    "#Updated calendar shape\n",
+    "print('Updated calendar shape:', calendar.shape)"
    ]
   },
   {
