Updates to path

--- a/Airbnb Listings Data Cleaning.ipynb
+++ b/Airbnb Listings Data Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[5 rows x 106 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,13 +908,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a26a51fb63fa4a6599d5f15a929b8473",
+       "model_id": "6eb665ae8a5547dd870452345af7c2f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +942,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,13 +967,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4e16198272a4c2394165e371a19cad6",
+       "model_id": "bf279ddb36cf4f87940189770708b45d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1002,7 +1002,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "[10 rows x 66 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
        "[7 rows x 66 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
        "Length: 66, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
        "(79948, 66)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,16 +2099,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x146260230b8>"
+       "<matplotlib.legend.Legend at 0x146280dbc18>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2152,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
