--- a/Airbnb Reviews Data Cleaning.ipynb
+++ b/Airbnb Reviews Data Cleaning.ipynb
@@ -5638,28 +5638,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#Set path to write listings\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\reviews_cleaned.csv'\n",
+    "\n",
+    "#Write listings to path\n",
+    "reviews.to_csv(path, sep='\\t')"
+   ]
   }
  ],
  "metadata": {
