Minor changes to print statement

--- a/Airbnb Reviews Data Cleaning.ipynb
+++ b/Airbnb Reviews Data Cleaning.ipynb
@@ -208,7 +208,8 @@
     }
    ],
    "source": [
-    "reviews.head()"
+    "print('Reviews data shape:',reviews.shape)\n",
+    "display(reviews.head())"
    ]
   },
   {
