--- a/Airbnb SF Analysis.ipynb
+++ b/Airbnb SF Analysis.ipynb
@@ -6754,6 +6754,162 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reviews Preparation for Natural Language Processing\n",
+    "\n",
+    "Add review_scores_rating from listings data to reviews data. Listings data only has review scores pertaining to the most recent review for a particular listing. This means that there will be many reviews that do not have a score, which we will remove during the merge."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Set path to get cleaned listings data\n",
+    "path = r'Data\\02_Intermediate\\listings_cleaned.csv'\n",
+    "\n",
+    "#Parse dates\n",
+    "parse_dates = ['last_review']\n",
+    "\n",
+    "#Read in Airbnb cleaned_listings Data\n",
+    "listings = pd.read_csv(path,index_col=0, parse_dates=parse_dates, low_memory=False, sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Check listings\n",
+    "listings.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merge review_scores_rating from listings to corresponding reviews**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merge\n",
+    "review_scores = reviews.merge(listings.loc[:,['last_review','id','review_scores_rating']], how='left', left_on= ['listing_id', 'date'], \n",
+    "                              right_on=['id', 'last_review'], suffixes=('_review', '_listings'))\n",
+    "#Check\n",
+    "review_scores.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning Merged Data Set for NLP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reviews' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-a6acc5f38caf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#View review_scores shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'review_scores original data shape:'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mreviews\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#View missing values in review_scores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Missing values:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreview_scores\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'reviews' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#View review_scores shape\n",
+    "print('review_scores original data shape:',reviews.shape)\n",
+    "\n",
+    "#View missing values in review_scores\n",
+    "print('Missing values:', review_scores.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop unnecessary columns from review_scores\n",
+    "review_scores.drop(columns=['last_review', 'id_listings'], axis = 1, inplace= True)\n",
+    "\n",
+    "#Rename columns\n",
+    "review_scores.rename(columns={'review_scores_rating':'review_rating'}, inplace=True)\n",
+    "\n",
+    "#Drop duplicate values\n",
+    "review_scores.drop_duplicates(inplace=True)\n",
+    "\n",
+    "#Strip leading and trailing white space\n",
+    "review_scores.comments = review_scores.comments.str.strip()\n",
+    "\n",
+    "#View updated reviews shape and missing values\n",
+    "print('Updated reviews data shape:',review_scores.shape)\n",
+    "print('Missing values: \\n', review_scores.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filter rows that do not contain english characters in the comments\n",
+    "review_scores.comments.replace('[^a-zA-Z0-9]',' ',regex = True, inplace=True)\n",
+    "\n",
+    "#Remove puncuation from comments\n",
+    "review_scores.comments = review_scores.comments.str.replace(r'[^\\w\\s]+', '')\n",
+    "\n",
+    "#Replace empty comments with nan\n",
+    "review_scores.comments = review_scores.comments.replace('', np.nan)\n",
+    "\n",
+    "#Remove rows with missing comments and/or review_rating\n",
+    "review_scores.dropna(subset=['comments', 'review_rating'], inplace=True)\n",
+    "\n",
+    "#View updated reviews shape\n",
+    "print('Updated reviews data shape:',review_scores.shape)\n",
+    "print('Missing values: \\n', review_scores.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filter out rows where comments are less than 2 characters long\n",
+    "review_scores = review_scores[review_scores.comments.apply(len) > 2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#View updated reviews shape\n",
+    "print('Updated reviews data shape:',review_scores.shape)\n",
+    "\n",
+    "#View review_scores\n",
+    "display(review_scores)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
