Cleaned up path data

--- a/Project Codes/Data Cleaning Scripts/Airbnb Calendar Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Calendar Data Cleaning.ipynb
@@ -637,11 +637,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write listings\n",
-    "# path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\calendar_cleaned.csv'\n",
+    "#Set path to write listings\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\12_23_2019_calendar_cleaned.csv'\n",
     "\n",
-    "# #Write listings to path\n",
-    "# calendar.to_csv(path)"
+    "#Write listings to path\n",
+    "calendar.to_csv(path)"
    ]
   }
  ],
