--- a/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to get aggregated listings data\n",
-    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
+    "path = r'SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
     "\n",
     "#Read in Airbnb Listings Data\n",
     "listings = pd.read_csv(path,index_col=0, low_memory=False, sep='\\t')\n"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "[5 rows x 106 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,13 +908,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eb665ae8a5547dd870452345af7c2f8",
+       "model_id": "675b06b53a9b42659516526d131f3771",
        "version_major": 2,
        "version_minor": 0
       },
@@ -942,7 +942,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,13 +967,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf279ddb36cf4f87940189770708b45d",
+       "model_id": "323892f1542f4ea7801c1cf15584b55a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1002,7 +1002,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1492,7 @@
        "[10 rows x 66 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
        "[7 rows x 66 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1917,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "Name: city, dtype: int64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
        "Length: 66, dtype: int64"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2066,7 +2066,7 @@
        "(79948, 66)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2099,16 +2099,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x146280dbc18>"
+       "<matplotlib.legend.Legend at 0x18113b00f28>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2152,15 +2152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Set path to write listings\n",
-    "# path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\Data\\02_Intermediate\\listings_cleaned.csv'\n",
+    "#Set path to write listings\n",
+    "path = r'Data\\02_Intermediate\\12_23_2019_listings_cleaned.csv'\n",
     "\n",
-    "# #Write listings to path\n",
-    "# listings.to_csv(path, sep='\\t')"
+    "#Write listings to path\n",
+    "listings.to_csv(path)"
    ]
   }
  ],
