Cleaning up code

--- a/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
@@ -18,6 +18,7 @@
     "import swifter\n",
     "\n",
     "import pandas as pd\n",
+    "import pandas_profiling\n",
     "\n",
     "import re\n",
     "\n",
