Completed Introduction subsection. Removed Unnecessary libraries. Ready for Final Review

--- a/Project Codes/Data Cleaning Scripts/Airbnb Reviews Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Reviews Data Cleaning.ipynb
@@ -13,7 +13,11 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "In the following notebook, I will be cleaning the Reviews data SF_Reviews_Nov2018_Oct2019.csv"
+    "In the following notebook, I will be cleaning an aggregation of Airbnb Reviews Data of the San Francisco area. This aggregation consists of reviews data from 11/2018 through 10/2019.\n",
+    "\n",
+    "The aggregation source code can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/blob/master/Airbnb%20Raw%20Data%20Aggregation.ipynb)\n",
+    "\n",
+    "Raw data can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)"
    ]
   },
   {
@@ -25,24 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read in libraries\n",
-    "import dask.dataframe as dd\n",
-    "import swifter\n",
-    "\n",
     "import pandas as pd\n",
     "import pandas_profiling\n",
     "\n",
     "import re\n",
     "\n",
-    "import numpy as np\n",
-    "from scipy import stats\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import numpy as np"
    ]
   },
   {
@@ -54,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
