Updated path and libraries

--- a/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
+++ b/Project Codes/Data Cleaning Scripts/Airbnb Listings Data Cleaning.ipynb
@@ -4,12 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning File"
+    "# Data Cleaning - Airbnb Listings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "\n",
+    "In the following notebook, I will be cleaning an aggregation of Airbnb Listings Data of the San Francisco area. This aggregation consists of listings data from 11/2018 through 10/2019.\n",
+    "\n",
+    "The aggregation source code can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/blob/master/Airbnb%20Raw%20Data%20Aggregation.ipynb)\n",
+    "\n",
+    "Raw data can be found [here](https://github.com/KishenSharma6/Airbnb-SF_ML_-_Text_Analysis/tree/master/Data/01_Raw/SF%20Airbnb%20Raw%20Data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,25 +39,100 @@
     "from scipy import stats\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "\n",
-    "#supress future warnings\n",
-    "import warnings\n",
-    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Set Additional Settings for Notebook**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#supress future warnings\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "#Set plot aesthetics for notebook\n",
+    "sns.set(style='whitegrid', palette='pastel', color_codes=True)\n",
+    "\n",
+    "#Increase number of columns and rows displayed by Pandas\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.max_rows',200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Read in Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set path to get aggregated listings data\n",
-    "path = r'SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
+    "path = r'C:\\Users\\kishe\\Documents\\Data Science\\Projects\\Python Projects\\In Progress\\Air BnB - SF\\SF Airbnb Raw Data - Aggregated\\SF_Listings_Nov2018_Oct2019.csv'\n",
     "\n",
     "#Read in Airbnb Listings Data\n",
     "listings = pd.read_csv(path,index_col=0, low_memory=False, sep='\\t')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pandas Profiling Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Create Pandas Profiling Report for listings data\n",
+    "# profile = listings.profile_report(title='Airbnb Listings Report')\n",
+    "\n",
+    "# #Write profile to an HTML file\n",
+    "# profile.to_file(output_file=\"Airbnb Listings Report.html\")\n",
+    "\n",
+    "# #Capture rejected variables\n",
+    "# rejected_variables = profile.get_rejected_variables(threshold=0.9)\n",
+    "\n",
+    "# #View variables that were rejected\n",
+    "# print('Variables rejected for having a greater collinearity than .9:', rejected_variables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Variables rejected for having a collinearity > .9\n",
+    "# ['availability_60', 'availability_90', 'calculated_host_listings_count_entire_homes', 'country_code', \n",
+    "# 'host_total_listings_count', 'last_scraped', 'maximum_minimum_nights', 'maximum_nights', \n",
+    "# 'maximum_nights_avg_ntm', 'minimum_maximum_nights', 'minimum_minimum_nights', 'minimum_nights', 'minimum_nights_avg_ntm']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #View pandas profile for Listings data\n",
+    "# profile"
    ]
   },
   {
@@ -2157,11 +2245,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set path to write listings\n",
-    "path = r'Data\\02_Intermediate\\12_23_2019_listings_cleaned.csv'\n",
+    "# #Set path to write listings\n",
+    "# path = r'Data\\02_Intermediate\\12_24_2019_listings_cleaned.csv'\n",
     "\n",
-    "#Write listings to path\n",
-    "listings.to_csv(path)"
+    "# #Write listings to path\n",
+    "# listings.to_csv(path)"
    ]
   }
  ],
