--- a/Project Codes/Airbnb Exploratory Analysis.ipynb
+++ b/Project Codes/Airbnb Exploratory Analysis.ipynb
@@ -1347,6 +1347,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listi.columns[df.nunique() <= 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
    "outputs": [
